--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "description": "",
   "dependencies": {
     "playwright": "^1.50.0"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.50.1"
   }
 }
